# conwayCPP

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  config.sh
include/: GameOfLife.hpp  cleanup.h  cleanup.hpp  res_path.hpp
src/: CMakeLists.txt  GameOfLife.cpp  GameOfLife.hpp  main.cpp
u_tst/: t_GameOfLife.cpp  tst.cpp
